RESOLVED FIXED127241
Memory leak in JSSubtleCrypto::wrapKey
https://bugs.webkit.org/show_bug.cgi?id=127241
Summary Memory leak in JSSubtleCrypto::wrapKey
Alexey Proskuryakov
Reported 2014-01-18 16:24:07 PST
Where is my C++14?
Attachments
proposed patch (1.84 KB, patch)
2014-01-18 16:25 PST, Alexey Proskuryakov
sam: review+
commit-queue: commit-queue-
Alexey Proskuryakov
Comment 1 2014-01-18 16:25:59 PST
Created attachment 221576 [details] proposed patch
WebKit Commit Bot
Comment 2 2014-01-18 18:10:32 PST
Comment on attachment 221576 [details] proposed patch Rejecting attachment 221576 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 221576, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.appspot.com/results/5722464168443904
Alexey Proskuryakov
Comment 3 2014-01-18 22:35:31 PST
Note You need to log in before you can comment on or make changes to this bug.