Memory leak in JSSubtleCrypto::wrapKey https://bugs.webkit.org/show_bug.cgi?id=127241

Reviewed by Sam Weinig.

* bindings/js/JSSubtleCryptoCustom.cpp: (WebCore::JSSubtleCrypto::wrapKey):
Delete algorithmPtr and parametersPtr that aren't smart pointers because of lambdas.



Canonical link: https://commits.webkit.org/145246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162287 268f45cc-cd09-0410-ab3c-d52691b4dbfc